--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 </head>
 <body>
     <header>
-        <img src="img/trinet.png" alt="Логтоип компании Trinet" width="200" height="57">
-        <ul>
+        <ul class="header-nav">
             <li><a href="#">Продвижение сайтов</a></li>
             <li><a href="#">Разработка сайтов</a></li>
             <li><a href="#">Контекстная реклама/SMM</a></li>
             <li><a href="#">Мероприятия</a></li>
             <li><a href="#">Хостинг</a></li>
         </ul>
-        <ul>
+        <img src="img/trinet.png" class="img-logo" alt="Логтоип компании Trinet" width="200" height="57">
+        <ul class="header-info">
             <li><button type="button">Заказать звонок</button></li>
             <li>или напишите нам на <a href="mailto:contact@trinet.ru">contact@trinet.ru</a></li>
         </ul>
-        <select name="select">
+        <select name="select" class="sel-city">
             <option value="value1" selected>Санкт-Петербург</option>
             <option value="value2">Москва</option>
         </select>
-        <p>пр. Медиков, д. 9, лит. Б<br>
+        <p class="header-text">пр. Медиков, д. 9, лит. Б<br>
             +7 (812) 303-87-43<br>
             +7 (800) 350-77-06<br>
             (время приема заявок с 10:00 до 18:30 по будням)</p>
